# oracle

./: AGENTS.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
.agents/plan/: 2026-07-03-sd-card-gif-fix.md  2026-07-04-sd-bsp-helper-optimization.md  2026-07-05-gif-viewer-componentization.md  2026-07-05-gif-viewer-deep-optimization.md
.devcontainer/: Dockerfile  devcontainer.json
components/dbg_console/: CMakeLists.txt  dbg_console.c
components/dbg_console/include/: dbg_console.h
components/gif_viewer_app/: CMakeLists.txt  app_config.h  app_console.c  app_console.h  app_events.h  app_ui.h  gif_player.c  gif_player.h  gif_viewer_app.c  idf_component.yml  sd_media.c  sd_media.h
components/gif_viewer_app/include/: gif_viewer_app.h
components/waveshare__esp32_s3_touch_lcd_1_85B/: CMakeLists.txt  Kconfig  README.md  esp32_s3_touch_lcd_1_85B.c  idf_component.yml
components/waveshare__esp32_s3_touch_lcd_1_85B/include/bsp/: display.h  esp32_s3_touch_lcd_1_85B.h
main/: CMakeLists.txt  app_ui.c  gif_playlist.c  gif_playlist.h  idf_component.yml  main.c  mmap_generate_assets.h
